fix half percentage not working on safari 6

--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ section.start-up-blog {
 
 .social-media ul li {
   float: left;
-  margin-right: 14.44%;
+  margin-right: 14%;
 }
 
 .social-media ul li:last-of-type {
